Initial Version to check above-the-fold

--- a/src/client/index.jade
+++ b/src/client/index.jade
@@ -109,7 +109,7 @@ html(data-ng-app="app")
     //- link(rel="stylesheet", href="bower_components/components-font-awesome/css/font-awesome.min.css")
     //- link(rel="stylesheet", href="common/css/fontface.css")
     //- link(rel="stylesheet", href="common/css/buttons.css")
-    //- link(rel="stylesheet", href="common/css/above-the-fold.css")
+    link(rel="stylesheet", href="common/css/splash.css")
     //- link(rel="stylesheet", href="common/css/main.css")
     //- link(rel="stylesheet", href="common/css/media-query.css")
     //- link(rel="stylesheet", href="common/css/loading/loading.css")
