Updates for clone

--- a/src/client/app/index/index.template.jade
+++ b/src/client/app/index/index.template.jade
@@ -1,3 +1,2 @@
 .main.display-none(data-ng-class="{'display-block':loaded}")
-  div
-    img(src="http://www.supergraphictees.com/wp-content/uploads/2013/01/DARKNIGHT-WHITE01.jpg")
+  |Hey listen MUAJA
